--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <div id="header-wrapper">
       <div id="header">
         <div>
-          <a class="logo" href=V"/"><img src="/images/logo.png" /></a>
+          <a class="logo" href="/"><img src="/images/logo.png" /></a>
           <ul class="nav">
             <li><a href="http://develop.allplayers.com">API v1</a></li>
             <li><a href="http://support.allplayers.com">Support</a></li>
