--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,12 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Develop AllPlayers.com - {{ page.title }}</title>
-  <script src="/shared/js/jquery.js" type="text/javascript"></script>
-  <script src="/shared/js/documentation.js" type="text/javascript"></script>
+  <script src="../shared/js/jquery.js" type="text/javascript"></script>
+  <script src="../shared/js/documentation.js" type="text/javascript"></script>
   <script type="text/javascript" src="../js/thickbox-compressed.js"></script>
 
-  <link href="/shared/css/documentation.css" media="screen" rel="stylesheet" type="text/css">
-  <link href="/shared/css/pygments.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="../shared/css/documentation.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="../shared/css/pygments.css" media="screen" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="../css/print.css" type="text/css" media="print">
 
 
@@ -21,7 +21,7 @@
     <div id="header-wrapper">
       <div id="header">
         <div>
-          <a class="logo" href="/"><img src="/images/logo.png" /></a>
+          <a class="logo" href="/"><img src="../images/logo.png" /></a>
           <ul class="nav">
             <li><a href="http://develop.allplayers.com">API v1</a></li>
             <li><a href="http://support.allplayers.com">Support</a></li>
