--- a/shared/css/documentation.css
+++ b/shared/css/documentation.css
@@ -123,7 +123,8 @@ a img {
 
 #header a.logo {
   float: left;
-  margin-top: 15px;
+  margin-top: 5px;
+  margin-bottom: 10px;
   display: inline-block;
 }
 
@@ -908,3 +909,15 @@ div.expandable > ul h3 > a.expanded:hover {
 }
 
 /* @end */
+
+
+/****************************/
+/*  WADL Style tables       */
+/****************************/
+
+div#public_wadl > table {
+  border: 1px solid black;
+}
+
+/* @end */
+
