Add links to FAQ and issue queue. closes #16

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,9 @@
             {% endfor %}
         </div> <!-- /sidebar-module -->
         <div class="sidebar-module">
+          <p>Having trouble or looking for additional information? Please check the API <a href="https://github.com/AllPlayers/develop.allplayers.com/wiki/Frequently-Asked-Questions">FAQ</a> or <a href="https://github.com/AllPlayers/develop.allplayers.com/issues">search for or create an issue</a>.</p>
+        </div>
+        <div class="sidebar-module">
           <p>This website is <a href="http://github.com/AllPlayers/develop.allplayers.com" target="_blank">open source</a>. Please help us by forking the project and adding to it.</p>
         </div>
       </div><!-- /sidebar-shell -->
