Add specific GA tracking code for develop.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,10 +65,10 @@
     <div id="footer" >
     </div><!-- /#footer -->
 
-
   <script type="text/javascript">
     var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-9812072-1']);
+    _gaq.push(['_setAccount', 'UA-9812072-3']);
+    _gaq.push(['_setDomainName', 'allplayers.com']);
     _gaq.push(['_trackPageview']);
     (function() {
       var ga = document.createElement('script');
