Add link to freenode #allplayers web chat.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   {% include navbar.snippet %} 
   <div id="wrapper">
     <div class="content">
-      <div class="alert alert-block"><h4 class="alert-heading">Notice</h4> Currently the AllPlayers.com API is in beta; for more information feel free to ask questions in (freenode) <code>#allplayers</code> or email us: <a href="mailto:api@allplayers.com">api@allplayers.com</a>.</div>
+      <div class="alert alert-block"><h4 class="alert-heading">Notice</h4> Currently the AllPlayers.com API is in beta; for more information feel free to ask questions in (freenode) <code><a href="http://webchat.freenode.net/?channels=allplayers&randomnick=1&prompt=1" target="_blank">#allplayers</a></code> or email us: <a href="mailto:api@allplayers.com">api@allplayers.com</a>.</div>
       {{ content }}
     </div>
   {% include sidebar.snippet %} 
