Refactor templates to match ap-bootstrap theme.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,20 @@
 <html>
 {% include head-tag.snippet %}
 <body>
-  {% include navbar.snippet %} 
-  <div id="wrapper">
-    <div class="content">
-      <div class="alert alert-block"><h4 class="alert-heading">Notice</h4> Currently the AllPlayers.com API is in beta; for more information feel free to ask questions in (freenode) <code><a href="http://webchat.freenode.net/?channels=allplayers&randomnick=1&prompt=1" target="_blank">#allplayers</a></code> or email us: <a href="mailto:api@allplayers.com">api@allplayers.com</a>.</div>
-      {{ content }}
+  {% include navbar.snippet %}
+  <div class="container">
+    <div class="row">
+      <div class="span12">
+        <div class="alert alert-block"><h4 class="alert-heading">Notice</h4> Currently the AllPlayers.com API is in beta; for more information feel free to ask questions in (freenode) <code><a href="http://webchat.freenode.net/?channels=allplayers&randomnick=1&prompt=1" target="_blank">#allplayers</a></code> or email us: <a href="mailto:api@allplayers.com">api@allplayers.com</a>.</div>
+      </div>
     </div>
-  {% include sidebar.snippet %} 
-  </div><!-- #wrapper -->
+    <div class="row">
+      <div class="span8">
+        {{ content }}
+      </div>
+      {% include sidebar.snippet %}
+    </div>
+  </div>
   {% include footer.snippet %}
 </body>
 </html>
